fix inner and h1 sizing on smaller windows

--- a/_includes/sass/_book.scss
+++ b/_includes/sass/_book.scss
@@ -7,4 +7,9 @@
   .writing & {
     max-width: $max-w-base;
   }
+
+  @media screen and (max-width: 40rem) {
+    padding: 0;
+  }
 }
+
