--- a/_includes/sass/_type.scss
+++ b/_includes/sass/_type.scss
@@ -80,6 +80,10 @@ h1 {
   font-size: 3.5rem;
   margin-top: $base-spacing;
 
+  @media screen and (max-width: 40rem) {
+    font-size: 2.5rem;
+  }
+
 }
 h2 {
   font-size: $medium-font-size;
